terraform/main.tf
provider "aws" {
  region = "eu-central-1"
}

#Create an isolated virtual network
resource "aws_vpc" "main_vpc" {
  cidr_block = "10.0.0.0/16"
}

#Create a subnet inside the VPC 
resource "aws_subnet" "main_subnet" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.1.0/24"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main_vpc.id
}
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}
